[package]
name = "corpus"
version = "0.2.1"
edition = "2018"
authors = ["Dan Cardin <ddcardin@gmail.com>"]
description = "Centrally Organized, Relative Path Uniqueness Strategy"
documentation = "https://github.com/DanCardin/corpus"
homepage = "https://github.com/DanCardin/corpus"
repository = "https://github.com/DanCardin/corpus"
readme = "README.md"
keywords = [
    "central",
    "path",
    "relative",
]
categories = ["command-line-utilities"]
license = "Apache-2.0"


[features]
home = ["dirs-next"]
xdg = ["etcetera", 'home']
binary = ["xdg", "home", "clap", "anyhow"]

[lib]
name = "corpus"
path = "src/lib.rs"

[[bin]]
name = "corpus"
path = "src/bin.rs"
required-features = ["binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = {version = "^2.0", optional = true}
etcetera = {version = "^0.3.2", optional = true}
anyhow = {version = "1.0.42", optional = true}
path-absolutize = "^3"
thiserror = "^1"

[dependencies.clap]
optional = true
version = "3.0.0-beta.4"
features = [
    "suggestions",
    "color",
]
